# boss-file-utils

./: .copier-answers.yml  .envrc.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  development.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
src/boss_file_utils/: __init__.py  app.py  boss_file_utils.py  cli.py  telemetry.py  tweet_cropper.py
tests/: test_app.py  test_cli.py  test_logging_config.py  test_middleware.py  test_telemetry.py  test_tweet_cropper.py
